@@ -1,2 +1,8 @@
 # CipherChef
 CipherChef - description
+UML: https://app.creately.com/diagram/YiOhCztCpPr/edit
+Jamboard:https://jamboard.google.com/d/1BJJLA-Qq4XkPwKjweYT0_whT12v0yW33YUIQciJF8mE/edit?usp=sharing
+Some helpful stuff to config:
+https://ashley-tharp.medium.com/error-java-package-javafx-application-does-not-exist-ac6ce7aa18ba
+VM options:
+--module-path C:\Users\User\Desktop\Javafx\javafx-sdk-11.0.2\lib --add-modules javafx.fxml,javafx.controls,javafx.graphics
